--- a/GraphicsLib/Graphics/Makefile
+++ b/GraphicsLib/Graphics/Makefile
@@ -7,19 +7,19 @@ ifeq ($(OS), Windows_NT)
 	EXT = .exe
 	RM	= del
 	CFLAGS =
-	LDFLAGS = -glut32 -lglu32 0lopengl32 -Wl,--subsystem,windows
+	LDFLAGS = -glut32 -lglu32 -lopengl32 -Wl,--subsystem,windows
 	CXX = c:\usr\local\mingw32\bin\g++.exe
 else
 	EXT =
 	RM 	= rm -f
 	CXX = g++
-	CFLAGS = -I/usr/local/include
 	UNAME_S := $(shell uname -s)
 	ifeq ($(UNAME_S), Linux)
 	    CFLAGS = -I/usr/include
 		LFLAGS = -lGL -lGLU -lglut
 	endif
 	ifeq ($(UNAME_S), Darwin)
+		CFLAGS = -I/usr/local/include
 		CFLAGS += -Wno-deprecated-declarations
 		LFLAGS = -framework OpenGL -framework GLUT
 	endif
