added pause in animate for PC

--- a/GraphicsLib/Makefile
+++ b/GraphicsLib/Makefile
@@ -6,8 +6,9 @@ TARGET 	= demo
 ifeq ($(OS), Windows_NT)
 	EXT = .exe
 	RM	= del
-	CFLAGS =
-	LDFLAGS = -glut32 -lglu32 -lopengl32 -Wl,--subsystem,windows
+	CFLAGS = -I/usr/local/include
+	LFLAGS = -L/usr/local/lib
+	LFLAGS += -lfreeglut -lglu32 -lopengl32 -Wl,--subsystem,windows
 	CXX = c:\usr\local\mingw32\bin\g++.exe
 else
 	EXT =
